# scroot

./: .gitignore  README.md  REPORT.md  autonomy_launcher.py
prototype/: IMPLEMENTATION.md  REPORT.md  actuator_bridge_node.py  navigator_node.py
scroot/: FILEMAP.md  FILEMAP.mds  GUI_GUIDE.md  LANE_DETECTOR.md  README.md  REPORT.md  camera_autopilot.py  scooter_app.py  setup_scroot.py
scroot-Stable/: README.md  REPORT.md  requirements.txt  run_everything.sh  run_full_stack.sh  setup_scroot_39.sh
scroot-Stable/autonomy/: pilot.py
scroot-Stable/catkin_ws/: README.md  REPORT_PLANNER.md  kill_sensors.sh  start_sensor_interface.sh
scroot-Stable/catkin_ws/devel/include/scooter_control/: AICommand.h  SensorHub.h  YoloDetection.h  YoloDetectionArray.h
scroot-Stable/catkin_ws/devel/include/sensor_interface/: SensorHub.h
scroot-Stable/catkin_ws/devel/include/yolo_tensorrt/: YoloDetection.h  YoloDetectionArray.h
scroot-Stable/catkin_ws/devel/lib/pkgconfig/: scooter_control.pc  sensor_interface.pc  yolo_tensorrt.pc
scroot-Stable/catkin_ws/devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
scroot-Stable/catkin_ws/devel/share/rplidar_ros/cmake/: rplidar_rosConfig.cmake
scroot-Stable/catkin_ws/devel/share/scooter_control/cmake/: scooter_control-msg-extras.cmake  scooter_control-msg-paths.cmake  scooter_controlConfig.cmake
scroot-Stable/catkin_ws/devel/share/sensor_interface/cmake/: sensor_interface-msg-paths.cmake  sensor_interfaceConfig.cmake
scroot-Stable/catkin_ws/docs/: FILEMAP.md  SELF_DRIVING_REPORT.md
scroot-Stable/catkin_ws/src/scooter_control/: CMakeLists.txt  README.md  package.xml
scroot-Stable/catkin_ws/src/scooter_control/launch/: yolo.launch
scroot-Stable/catkin_ws/src/scooter_control/msg/: AICommand.msg  ActuatorCommand.msg  Detection.msg  YoloDetection.msg  YoloDetectionArray.msg
scroot-Stable/catkin_ws/src/scooter_control/rviz/: master_control.rviz
scroot-Stable/catkin_ws/src/scooter_control/scripts/: command_arbitrator_node.py  controller_node.py  dual_yolo_node.py  live_overlay_gui.py  planner_node.py  sensor_fusion_planner_node.py
scroot-Stable/catkin_ws/src/scroot_bridge/: CMakeLists.txt  package.xml
scroot-Stable/catkin_ws/src/scroot_bridge/launch/: ai_input_bridge.launch  full_system.launch
scroot-Stable/catkin_ws/src/scroot_bridge/scripts/: ai_input_bridge.py
scroot-Stable/catkin_ws/src/sensor_interface/: CMakeLists.txt  README.md  package.xml
scroot-Stable/catkin_ws/src/sensor_interface/launch/: rplidar.launch  sensor_interface.launch  sensor_interface_dynamic.launch
scroot-Stable/catkin_ws/src/sensor_interface/msg/: AICommand.msg  SensorHub.msg
scroot-Stable/catkin_ws/src/sensor_interface/nodes/: visualize_sensor_hub.py
scroot-Stable/catkin_ws/src/sensor_interface/scripts/: sensor_interface_node.py  start_rplidar.py  visualize_sensor_hub.py
scroot-Stable/scooter_control/config/: params.yaml
scroot-Stable/scooter_control/launch/: master_control.launch
scroot-Stable/scooter_control/msg/: SensorHub.msg
scroot-Stable/scooter_control/scripts/: cruise_control_node.py  lane_assist_node.py  object_avoidance_node.py  safety_supervisor_node.py  trt_yolo.py
scroot-Stable/scroot/: FILEMAP.mds  GUI_GUIDE.md  README.md  REPORT.md  autonomy_launcher.py  main.py  navigator.py  setup.sh  setup_jetson_rosmaster.py  setup_scroot.py  setup_wsl.sh
scroot-Stable/scroot/ai/: README.md  __init__.py
scroot-Stable/scroot/autonomy/: __init__.py  actuator_output.py  camera.py  detector.py  navigator.py  pilot.py  requirements.txt  simple_cpu_pilot.py
scroot-Stable/scroot/autonomy/ai/: __init__.py  advisor.py
scroot-Stable/scroot/autonomy/app/: environment.py  gui.py  hardware.py  profiles.py  state.py
scroot-Stable/scroot/autonomy/control/: actuator_output.py  arbitration.py  companion.py  config.py  context.py  controller.py  mindset.py  telemetry.py
scroot-Stable/scroot/autonomy/perception/: lane_detection.py  object_detection.py
scroot-Stable/scroot/autonomy/planning/: navigator.py
scroot-Stable/scroot/autonomy/sensors/: camera.py  lidar.py
scroot-Stable/scroot/autonomy/utils/: data_structures.py  filters.py
scroot-Stable/scroot/bridge/: __init__.py  ai_input_bridge.py  ros_sensor_bridge.py
scroot-Stable/scroot/core/: README.md  __init__.py
scroot-Stable/scroot/pilot/: README.md  __init__.py
scroot-Stable/scroot/prototype/: sensor_interface_node.py
scroot-Stable/sensor_interface/: package.xml
scroot-Stable/sensor_interface/config/: scan_to_cloud.yaml
scroot-Stable/sensor_interface/launch/: lidar_test.launch  rplidar_to_pcd.launch  visualize_sensor_hub.launch
scroot-Stable/sensor_interface/nodes/: sensor_interface_node.py
scroot-Stable/yolo_tensorrt/: CMakeLists.txt  package.xml
scroot-Stable/yolo_tensorrt/msg/: YoloDetection.msg  YoloDetectionArray.msg
scroot/autonomy/: __init__.py  pilot.py  requirements.txt
scroot/autonomy/ai/: __init__.py  advisor.py  command_interface.py  lite_advisor.py
scroot/autonomy/app/: __init__.py  bootstrap.py  environment.py  gui.py  hardware.py  profiles.py  state.py
scroot/autonomy/control/: arbitration.py  companion.py  config.py  context.py  controller.py  mindset.py  telemetry.py
scroot/autonomy/core/: __init__.py  mode_manager.py
scroot/autonomy/gui/: __init__.py  dashboard.py
scroot/autonomy/perception/: lane_detection.py  object_detection.py
scroot/autonomy/planning/: __init__.py  gps.py  localization.py  navigator.py  summon.py
scroot/autonomy/runtime/: __init__.py  runtime_guard.py
scroot/autonomy/safety/: __init__.py  guardian.py
scroot/autonomy/sensors/: __init__.py  base.py  camera.py  gps.py  lidar.py  manager.py  rosmaster.py
scroot/autonomy/utils/: data_structures.py
scroot/configs/: jetson_rosmaster.json
scroot/logs/: advisor_state.json  command_state.json  macos_demo.csv
scroot/utils/: __init__.py  camera.py  preflight.py
src/kuksa_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/kuksa_bridge/kuksa_bridge/: kuksa_bridge_node.py  kuksa_bridge_test.py
src/kuksa_bridge/resource/: kuksa_bridge
(+52 files in other folders)
