<?xml version="1.0"?>
<package format="2">
  <name>sensor_interface</name>
  <version>0.1.0</version>
  <description>A package to fuse sensor data from LiDAR and camera.</description>

  <maintainer email="jetson@todo.todo">jetson</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
