<?xml version="1.0"?>
<package format="3">
  <name>kuksa_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 node bridging vehicle topics with Eclipse Kuksa Databroker</description>

  <maintainer email="malyka.sardar@ontariotechu.ca">Malyka Sardar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>kuksa-client</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

