<?xml version="1.0"?>
<package format="2">
  <name>scroot_bridge</name>
  <version>0.1.0</version>
  <description>Launch helper that wraps the scroot ai_input_bridge node.</description>

  <maintainer email="team@scroot.ai">Scroot Integration</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_interface</exec_depend>
</package>
